--- a/prot_tipo_a_-_dtt.html
+++ b/prot_tipo_a_-_dtt.html
@@ -33,7 +33,7 @@
       <div id="u1" class="ax_default button" data-label="btn_iniciar">
         <div id="u1_div" class=""></div>
         <div id="u1_text" class="text ">
-          <p><span>Iniciar r</span></p>
+          <p><span>Iniciar</span></p>
         </div>
       </div>
 
