--- a/prot_tipo_a_-_dtt.html
+++ b/prot_tipo_a_-_dtt.html
@@ -114,12 +114,11 @@
       </div>
 
       <!-- Unnamed (Rectangle) -->
-      <div id="u13" class="ax_default heading_1">
-        <div id="u13_div" class=""></div>
-        <div id="u13_text" class="text ">
-          <p style="font-size:6px;"><span>&nbsp;</span></p><p style="font-size:6px;"><span><br></span></p><p style="font-size:18px;"><span style="font-size:30px;">&nbsp;Protótipo A (DTT)</span><span>&nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;&nbsp; </span></p>
-          <p style="font-size:6px;"><span>&nbsp;</span></p><p style="font-size:6px;"><span><br></span></p><p style="font-size:18px;"><span style="font-size:30px;">&nbsp;Contato: Laíza Ribeiro Silva (laizaribeiroinfor@gmail.com)</span><span>&nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;&nbsp; </span></p>
-        </div>
+      <div id="u14" class="ax_default heading_1">
+        <div id="u14_div" class=""></div>
+        <div id="u14_text" class="text ">
+          <p style="font-size:6px;"><span><br></span></p><p style="font-size:18px;"><span>&nbsp;Protótipo A (DTT)</span></p><p style="font-size:10px;"><span><br></span></p>
+         <p style="font-size:6px;"><span><br></span></p><p style="font-size:18px;"><span>&nbsp;Contato: Laíza Ribeiro Silva (laizaribeiroinfor@gmail.com)</span></p><p style="font-size:10px;"><span><br></span></p>
       </div>
     </div>
   </body>
