--- a/prot_tipo_a_-_dtt.html
+++ b/prot_tipo_a_-_dtt.html
@@ -121,5 +121,6 @@
          <p style="font-size:6px;"><span><br></span></p><p style="font-size:18px;"><span>&nbsp;Contato: Laíza Ribeiro Silva (laizaribeiroinfor@gmail.com)</span></p><p style="font-size:10px;"><span><br></span></p>
       </div>
     </div>
+    </div>  
   </body>
 </html>
