--- a/prot_tipo_a_-_dtt.html
+++ b/prot_tipo_a_-_dtt.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Protótip testeo A - DTT</title>
+    <title>Protótipo A - DTT</title>
     <meta http-equiv="X-UA-Compatible" content="IE=edge"/>
     <meta http-equiv="content-type" content="text/html; charset=utf-8"/>
     <meta name="viewport" content="width=device-width, height=device-height, initial-scale=1.0"/>
